# colors

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
